--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -4,7 +4,10 @@ body{
     background-color: rgb(158, 156, 154);
     display: flex;
     flex-direction: column;
-    width: 600px;
+    width: 70%;
+    height: 0 auto;
+    border-style: solid;
+    border-width: 2px;
 }
 
 header{
