--- a/views/pages/searches/new.ejs
+++ b/views/pages/searches/new.ejs
@@ -13,13 +13,7 @@
 <body>
     <header>Best Books!</header>
     <main>
-        <nav>
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/new">Search the google API</a></li>
-            </ul>
-        </nav>
-        <!-- <h2>Search by Title or Author</h2>
+        <h2>Search by Title or Author</h2>
         <form action="/searches" method="post">
             <label class="enter">
                 <input type="text" name="search" placeholder="Enter a title or author" required> </label>
@@ -32,7 +26,7 @@
                 <input type="checkbox" name="author" >
             </label>
             <button>Search thr Google Books API !</button>
-        </form> -->
+        </form>
     </main>
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
 
