--- a/views/pages/searches/new.ejs
+++ b/views/pages/searches/new.ejs
@@ -11,7 +11,15 @@
 </head>
 
 <body>
-    <header>Best Books!</header>
+    <header>
+        <h1>Best Books! </h1>
+        <nav>
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/new">Search the google API</a></li>
+            </ul>
+        </nav>
+    </header>
     <main>
         <h2>Search by Title or Author</h2>
         <form action="/searches" method="post">
@@ -28,8 +36,7 @@
             <button>Search thr Google Books API !</button>
         </form>
     </main>
-    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-
+    
 </body>
 
 </html>
