--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,10 +1,11 @@
 body{
     margin-left: 1%;
+    margin-right: 1%;
     padding: 0%;
     background-color: rgb(158, 156, 154);
     display: flex;
     flex-direction: column;
-    width: 70%;
+    /* width: 70%; */
     height: 0 auto;
     border-style: solid;
     border-width: 2px;
@@ -27,9 +28,14 @@ h2{
 
 
 }
-form{
+form {
     display: flex;
     flex-direction: column;
+    width: 55%;
+    margin-left: 22%;
+    margin-top: 3%;
+    margin-bottom: 8%;
+    border: 1px solid;
 }
 .enter{
     background-color: white;
@@ -87,9 +93,74 @@ p.bookauthor {
     font-family: cursive;
 }
 p.bookdescp {
-    width: auto;
+    width: 70%;
     text-align: center;
+    margin-left: 15%;
 }
 form.select {
     margin-top: 19px;
+    width: 72%;
+    margin-left: 14%;
+}
+
+
+img {
+    width: 37%;
+    margin-bottom: 3%;
+    display: flex;
+    padding-left: 28%;
+}
+
+
+
+h3 {
+    font-size: 15px;
+    font-family: sans-serif;
+    padding-bottom: 2%;
+    text-align: center;
+}
+
+.detBtn{
+    background-color: black;
+    color: white;
+    height: 40px;
+    width: 50%;
+    margin-left: 23%;
+}
+.aa {
+    color: white;
+    text-decoration: none;
+}
+
+.lblADD {
+    display: flex;
+    flex-direction: column;}
+
+input[type="text"] {
+  height: 29px;
+ }
+
+nav {
+    position: relative;
+    top: -26px;
+    float: right;
+    margin-right: 18px;
+}
+
+li {
+    display: inline;
+    padding-left: 25px;
+}
+img.img1 {
+    width: 22%;
+    margin: 26px 85px;
+}
+
+p {
+    margin-bottom: 21px;
+    font-family: sans-serif;
+    font-size: 14px;
+    text-align: center;
+    margin-left: 18px;
+    margin-right: 18px;
 }
