--- a/views/pages/layout/header.ejs
+++ b/views/pages/layout/header.ejs
@@ -1,11 +1,17 @@
-
 <header>
     <h1>Best Books! </h1>
     <nav>
-        <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/new">Search the google API</a></li>
-        </ul>
+        <div id="myNav" class="overlay">
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+            <div class="overlay-content">
+              <a href="/">Home</a>
+              <a href="/new">Search the google API</a>
+              
+            </div>
+          </div>
+          
+          
+          <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
     </nav>
+    
 </header>
-        
