--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,73 +1,111 @@
 body{
-    margin-left: 1%;
-    margin-right: 1%;
+    margin: auto;
     padding: 0%;
     background-color: rgb(158, 156, 154);
     display: flex;
     flex-direction: column;
-    /* width: 70%; */
-    height: 0 auto;
-    border-style: solid;
-    border-width: 2px;
+    
 }
 
 header{
     color: white;
     background-color: rgb(3, 3, 3);
-    height: 40px;
+    height: 61px;
     padding-left: 2%;
     padding-top: 2%;
 }
-h2{
+h1 {
+    font-size: 31px;
+}
+h2 {
     color: white;
     background-color: rgb(83, 78, 78);
     height: 40px;
     text-align: center;
-    line-height: 40px;
+    line-height: 66px;
     padding-left: 2%;
-
-
+    height: 74px;
+    font-size: 29px;
+    font-family: cursive;
 }
+
 form {
     display: flex;
     flex-direction: column;
-    width: 55%;
-    margin-left: 22%;
+    width: 65%;
+    /* height: 281px; */
+    margin-left: 17%;
     margin-top: 3%;
-    margin-bottom: 8%;
-    border: 1px solid;
+    margin-bottom: 3%;
 }
-.enter{
-    background-color: white;
-    color: black;
-    margin-top: 20px;
-    height: 40px;
-    padding-left: 2%;
-    line-height: 40px;
 
 
-}
-.ta{
-    background-color: gray;
-    color: black;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    height: 40px;
-    padding-left: 2%;
-    line-height: 40px;
-
-}
 button{
     background-color: black;
     color:white;
     height: 40px;
+    cursor: pointer;
 
+} 
+/* ----------------------------------------------------
+ */
+
+ form.form-1 {
+    width: 62%;
+    border: none;
+ }
+ .enter {
+    background-color: white;
+    color: black;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    height: 58px;
+    padding-left: 2%;
+    line-height: 40px;
+    border: 2px solid #9e4747;
+    border-radius: 25px;
+}
+.ta {
+    background-color: gray;
+    color: black;
+    /* margin-top: 30px; */
+    margin-bottom: 24px;
+    height: 60px;
+    padding-left: 2%;
+    line-height: 40px;
+    border: 2px solid #9e4747;
+    border-radius: 25px;
+}
+span {
+    font-size: 25px;
+    position: relative;
+    top: 7px;
+    font-family: monospace;
+    left: 10px;
+}
+input[type="checkbox"] {
+    position: relative;
+    left: 26px;
+    top: 8px;
 }
 
+button#search-btn {
+    border: 2px solid #f7f3f3;
+    border-radius: 25px;
+    height: 87px;
+    font-size: 23px;
+}
+button#search-btn:hover{
+    color: darkred;
+}
+input#enter-ta {
+    border: none;
+    font-size: 22px;
+}
 /* -----------------------------------------
  */
 
- div {
+   #mybook {
     display: flex;
     flex-direction: column;
     background-color: #c3bfbf;
@@ -75,70 +113,139 @@ button{
     margin-left: 8%;
     margin-top: 5%;
     padding: 6% 4%;
-}
+} 
 
 img.bookimage {
-    width: 167px;
-    padding: 2% 35%;
+    width: 27%;
+    margin-left: 35%;
+    margin-top: 3%;
+    border: 9px solid;
 }
 
+img.bookimage:hover{
+    border: 10px solid #534d4d;
+    border-radius: 100px;
+}
 p.booktitle {
     text-align: center;
     color: white;
-    font-family: sans-serif;
+    font-family: cursive;
+    font-size: 23px;
+    font-weight: bold;
 }
 p.bookauthor {
     text-align: center;
     padding: 2% 0%;
     font-family: cursive;
+    font-size: 24px;
 }
 p.bookdescp {
     width: 70%;
     text-align: center;
-    margin-left: 15%;
+    margin-left: 13%;
+    font-size: 22px;
 }
-form.select {
+
+button.select {
+    height: 65px;
+    font-size: 21px;
     margin-top: 19px;
-    width: 72%;
-    margin-left: 14%;
+    width: 76%;
+    margin-left: 13%;
+    border: 2px solid #9e4747;
+    border-radius: 25px;
 }
-
-
+button.select:hover{
+    color: rgb(240, 218, 94);
+}
 img {
     width: 37%;
     margin-bottom: 3%;
     display: flex;
-    padding-left: 28%;
+    margin-left: 30%;
+    border: 7px solid black;
+}
+img:hover{
+    border: 7px solid #1d5772;
+    border-radius: 100px;
+}
+button.mybook {
+    border: 2px solid #613737;
+    border-radius: 25px;
+    height: 69px;
+    font-size: 23px;
+    cursor: pointer;
+    margin-top: 12px;
+}
+button.mybook:hover{
+    color: rgb(240, 218, 94);
 }
 
 
-
 h3 {
-    font-size: 15px;
-    font-family: sans-serif;
+    font-size: 23px;
+    font-family: monospace;
     padding-bottom: 2%;
     text-align: center;
 }
 
 .detBtn{
     background-color: black;
-    color: white;
-    height: 40px;
-    width: 50%;
-    margin-left: 23%;
+    height: 78px;
+    cursor: pointer;
+    border: 2px solid #757498;
+    border-radius: 15px;
 }
 .aa {
     color: white;
     text-decoration: none;
+    font-size: 26px;
+}
+.aa:hover {
+    color: rgb(65, 120, 156);
+    cursor: pointer;
 }
 
 .lblADD {
     display: flex;
-    flex-direction: column;}
-
+    flex-direction: column;
+    font-size: 24px;
+    font-family: fantasy;
+    margin-bottom: 8px;
+    margin-top: 8px;
+    position: relative;
+    left: 12px;
+}
+textarea.desc {
+    margin: 0px;
+    height: 224px;
+    width: 840px;
+    font-size: 19px;
+    padding-top: 11px;
+}
 input[type="text"] {
-  height: 29px;
- }
+    height: 50px;
+    padding-left: 15px;
+    padding-right: 15px;
+    font-family: cursive;
+    font-size: 14px; 
+    border: 2px solid #9e4747;
+    border-radius: 25px;
+}
+textarea {
+    padding-left: 16px;
+    padding-right: 16px;
+    border: 2px solid #9e4747;
+    border-radius: 25px;
+}
+
+button#up-btn {
+    height: 61px;
+    font-size: 16px;
+    cursor: pointer;
+    border: 2px solid #757498;
+    border-radius: 25px;
+}
 
 nav {
     position: relative;
@@ -152,15 +259,129 @@ li {
     padding-left: 25px;
 }
 img.img1 {
-    width: 22%;
-    margin: 26px 85px;
+    width: 24%;
+    /* margin: 26px 85px; */
+    margin-top: 42px;
+    margin-left: 38%;
 }
 
 p {
     margin-bottom: 21px;
-    font-family: sans-serif;
-    font-size: 14px;
+    font-family: serif;
+    font-size: 19px;
     text-align: center;
     margin-left: 18px;
     margin-right: 18px;
 }
+
+h5 {
+    text-align: center;
+    font-size: 23px;
+    font-family: monospace;
+    font-weight: 700;
+}
+h6 {
+    text-align: center;
+    font-size: 20px;
+    font-family: cursive;
+    margin-top: 24px;
+    margin-bottom: 22px;
+}
+button#update_btn {
+    height: 78px;
+    width: 100%;
+    font-size: 27px;
+    margin-top: 15px;
+    cursor: pointer;
+    border: 2px solid #757498;
+    border-radius: 15px;
+}
+
+button#delete-btn {
+    height: 70px;
+    width: 100%;
+    font-size: 24px;
+    cursor: pointer;
+    border: 2px solid #757498;
+    border-radius: 15px;
+}
+
+button#update_btn:hover ,button#delete-btn:hover{
+    color: cornflowerblue;
+}
+
+/* body {
+    font-family: 'Lato', sans-serif;
+  } */
+  
+  .overlay {
+    height: 100%;
+    width: 100%;
+    display: none;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0, 0.9);
+  }
+  
+  .overlay-content {
+    position: relative;
+    top: 25%;
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+  }
+  
+  .overlay a {
+    padding: 41px 27px;
+    text-decoration: none;
+    font-size: 36px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  }
+  
+  .overlay a:hover, .overlay a:focus {
+    color: #f1f1f1;
+  }
+  
+  .overlay .closebtn {
+    position: absolute;
+    top: 20px;
+    right: 45px;
+    font-size: 60px;
+  }
+  
+  @media screen and (max-height: 450px) {
+    .overlay a {font-size: 20px}
+    .overlay .closebtn {
+    font-size: 40px;
+    top: 15px;
+    right: 35px;
+    }
+  }
+
+  /* -----------------------------footer--------------- */
+
+  footer {
+    background: black;
+    
+  }
+p.done {
+    color: #d6c672;
+    font-family: cursive;
+    float: right;
+    padding-top: 11px;
+    text-align: center;
+}
+p.all {
+    font-family: none;
+    padding-top: 11px;
+    color: white;
+    text-align: center;
+    float: left;
+}
+
+  
