--- a/views/pages/book/show.ejs
+++ b/views/pages/book/show.ejs
@@ -12,12 +12,20 @@
     <header>
         <h1>Best Books! </h1>
         <nav>
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/new">Search the google API</a></li>
-            </ul>
+            <div id="myNav" class="overlay">
+                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                <div class="overlay-content">
+                  <a href="/">HOME</a>
+                  <a href="/new">Search the google API</a>
+                  
+                </div>
+              </div>
+              
+              
+              <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
         </nav>
-    </header>    
+        
+    </header>
     <h2>Search Results</h2>
     <% book.forEach((val)=> { %>
     <div>
@@ -34,7 +42,15 @@
         </form>
     </div>
     <% }); %>
+
     
+    <footer>
+        <p class="all">All right reserved 2020 </p>
+        <p class="done">Done By : Reham AL-Sobh </p>
+        
+    </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.js"></script>
+    <script src="/js/app.js"></script>
 
 </body>
 
