--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="/styles/reset.css">
     <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 
@@ -18,7 +19,7 @@
     <section>
 
         <% books.forEach(book => { %>
-        <div>
+        <div id="mybook">
             <h4> <img src="<%= book.image %>"></h4>
             <h3>Title: <%= book.title %></h3>
             <h3> Author: <%= book.author %></h3>
@@ -30,7 +31,13 @@
 
     </section>
     </main>
-
+    <footer>
+        <p class="all">All right reserved 2020 </p>
+        <p class="done">Done By : Reham AL-Sobh </p>
+        
+    </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.js"></script>
+    <script src="/js/app.js"></script>
 </body>
 
 </html>
